--- a/RSA_lab_2/RSA_lab_2/Views/Home/Encrypt.cshtml
+++ b/RSA_lab_2/RSA_lab_2/Views/Home/Encrypt.cshtml
@@ -23,5 +23,20 @@
         <li class="five">
         <h5>Обчислити секретну експоненту</h5>
         d = @ViewBag.D 
+    </li>   
+        <li class="six">
+        <h5> Опублікувати відкритий ключ</h5>
+        {e, n} = {@ViewBag.E, @ViewBag.N}
     </li>
+            <li class="six">
+        <h5> Зберегти закритий ключ</h5>
+        {d, n} = {@ViewBag.D, @ViewBag.N}
+    </li>
+</ol>
+ <h4>Шифрування</h4>
+<ol class="round">
+    <li class="one">
+        <h5>Обчислити шифротекст</h5>
+        C = message<sup>e</sup> mod n = @ViewBag.C
+    </li>  
 </ol>
