Final not checked version

--- a/RSA_lab_2/Views/Home/Encrypt.cshtml
+++ b/RSA_lab_2/Views/Home/Encrypt.cshtml
@@ -1,4 +1,5 @@
-﻿<ol class="round">
+﻿
+<ol class="round">
     <li class="one">
         <h5>Вибрати два простих різних числа</h5>
         p = @ViewBag.P
@@ -43,15 +44,8 @@
 
 <h4>Дешифрування</h4>
 <input id="Decryption" type="text" value =" @ViewBag.C"/>
-<input id="ButtonDecrypt" type="button" value="Дешифрувати" />
-
-<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-
-<script type="text/jscript">
-    $('#ButtonDecrypt').click(function () {
-        $('h3').text("1111");
-    })
-</script>
 
 <h3 id ="h3">@ViewBag.message</h3>
+
+
 
