--- a/RSA_lab_2/Views/Home/Index.cshtml
+++ b/RSA_lab_2/Views/Home/Index.cshtml
@@ -1,4 +1,5 @@
 ﻿<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script src="/Scripts/Site.js"></script>
 
 @{
     ViewBag.Title = "Home Page";
@@ -32,3 +33,4 @@
 
 <p id="rData">
 </p>
+
